--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,28 @@
+* {
+    margin:0;
+    padding:0;   
+    }
+
 header {
     background: #ffffff;
     border-color: #cccccc;
     position: fixed;
-    padding: 29px;
     width: 100%;
     border-bottom: 1px solid;
-    top: 0;
-    left: 0;
     z-index: 9001;
-}
-
-nav {
     background: #ffffff;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    width: 82%;
-    position: fixed;
-    top: 0;
-    left: 160px;
-    z-index: 9002;
-
 }
 
 footer {
-    border-top: 10px solid;
+    border-top: 1vw solid;
     border-color: #4aaaa5;
     background-color: #666666;
-    padding: 30px;
-    margin-top: 20px;
+    min-height: 5vw;
     width: 100%;
     position: fixed;
-    bottom: 0;
-    left: 0;
+    color: white;
+    text-align: center;    
 }
 
 body {
@@ -39,15 +31,14 @@ body {
 }
 
 section {
-    clear: both;
-    width: 80%;
-    margin: 100px 150px;
+    width: 74%;
+    margin-left: 13vw;
+    margin-top: 5vw;
     background-color: #ffffff;
     border: 2px solid;
     border-color: #dddddd;
-    font-size: 28px;
-    color: #4aaaa5;
-    padding: 20px;
+    color: #777777;
+    font-size: 18px;
 }
 
 article {
@@ -56,10 +47,6 @@ article {
     border-top: 1px solid;
     padding: 20px;
     font-size: 20px;
-}
-
-p {
-    padding: 10px;
 }
 
 input {
@@ -91,17 +78,19 @@ textarea {
 
 .myname {
     padding: 20px;
-    float: left;
     background-color: #4aaaa5;
     color: white;
+    font-weight: bolder;
 }
 
-.navlink {
-    float: left;
-    margin-left: 800px;
+.myheader {
+    color: #4aaaa5;
+    font-size: 20px;
+    font-weight: bolder;
+    padding: 20px;
 }
 
-.navlink a {
+nav a {
     text-decoration: none;
     font-family: 'Georgia', Times, Times New Roman, serif;
     font-size: 16px;
@@ -113,7 +102,8 @@ textarea {
     margin-left: 5px;
 }
 
-.navlink a:hover {
+nav a:hover {
+    text-decoration: none;
     color: white;
     background: #4aaaa5;
 }
@@ -122,19 +112,18 @@ textarea {
     display: block;
     position: relative;
     padding: 5px;
-    margin: 30px;
+    margin: 10px;
     float: left;
     border: 2px solid;
-    border-color: #4aaaa5;
+    border-color: cyan;
 }
 
 .description {
     text-decoration: none;
     padding: 15px;
     text-align: center;
-    background-color: #4aaaa5;
-    color: white;
-    
+    background-color: cyan;
+    color: white;   
 }
 
 .cleared {
@@ -157,7 +146,7 @@ textarea {
 
 .enlarge:focus {
     width: 100%;
-    height: 500px;
+    height: 30vw;
 }
 
 input[type=text]:focus {
@@ -171,12 +160,13 @@ textarea[type=text]:focus {
 }
 
 #myimage {
-    width: 15%;
     float: left;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    width: 20%;
+    margin-right: 1vw;
+    margin-bottom: 1vw;
 }
 
 #submitbutton {
-    width: 10%;
+    width: 100px;
 }
+
