centered navbar at 640px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,7 +231,10 @@ textarea[type=text]:focus {
 
     nav {
         text-align: center;
-        align-content: center;
+    }
+
+    ul {
+        margin: auto;
     }
 
     #myimage {
